# l10n-dev-tools-server

./: .editorconfig  .env  .gitignore  LICENSE  README.md  api.rest  docker-compose.yaml  package.json  pyproject.toml
docs/: README.md
docs/design/: model.puml
l10n_server/: db.dump  db.sqlite3  manage.py
l10n_server/account/: models.py  serializers.py  urls.py  views.py
l10n_server/account/migrations/: 0001_initial.py
l10n_server/l10n_app_translations/: apps.py  models.py
l10n_server/l10n_app_translations/migrations/: 0001_initial.py  0002_l10apptranslation_deleted_at.py
l10n_server/l10n_apps/: apps.py  models.py  urls.py
l10n_server/l10n_apps/migrations/: 0001_initial.py  0002_l10app_deleted_at.py
l10n_server/l10n_server/: asgi.py  settings.py  urls.py  wsgi.py
l10n_server/locales/: admin.py  models.py  urls.py
l10n_server/locales/migrations/: 0001_initial.py  0002_alter_locales_deleted_at.py
l10n_server/repositories/: admin.py  models.py
l10n_server/repositories/migrations/: 0001_initial.py  0002_alter_l10apps_deleted_at.py  0003_alter_l10apps_created_at.py
l10n_server/utils/: models.py
